fix chnage of venue

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -49,7 +49,7 @@
 		  <p>In order to register for any event, prospective attendees will always need to provide their:</p>
 		  <ul class="list list-bullet">
 			  <li>full name</li>
-			  <li>full address and postcode</li>
+			  <li>full business address</li>
 			  <li>phone number</li>
 			  <li>email address</li>
 			  <li>company name</li>
