some adjustments to the preview page

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -85,15 +85,16 @@
   <div align="center">
 
     {% if session.liveOrNot == "false" %}
-      <div style="background-color: #fd7521; height:130px; padding-top:20px; padding-bottom:10px; display: flex;" >
+      <div style="background-color: #FFFFFF; border-bottom: 5px solid #000000; height:130px; padding-top:10px; padding-bottom:10px; display: flex;" >
 
-        <div style="margin-right:50px; margin-left:20px; margin-top:30px; float: left; width:200px;">
-          <p style="font-size:18px;"><a href="/account#draft-events">Account home</a></p>
+        <div style="margin-right:0px; margin-left:10px; margin-top:0px; float: left; width:200px;">
+          <p style="font-size:18px;" align="left"><a style="color:#000000;" href="/account#draft-events">Account home</a></p>
+          
+          <p style="font-size:18px;" align="left">Draft URL<br>www.great.gov.uk/event/mh43dz</p>
         </div>
 
-        <div style="float:left; width:100%;">
+        <div style="float:left; width:100%; margin-top:30px;">
           <p style="margin:5px; margin-top:10px; font-size:36px; font-weight:700;">Draft event</p>
-          <p style="margin:25px; font-size:24px">www.great.gov.uk/event/mh43dz</p>
         </div>
 
 
