--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -17,6 +17,7 @@
                 <a href="/summary-data/{{itemRow}}/true">Edit event</a> <br>
                 <a href="/clone-event/{{itemRow}}/true">Clone event</a> <br>
                 <a href="#">Close registrations</a> <br>
+                <a href="#">Unpublish event</a>
                 <a href="#">Delete event</a>
               </p>
             </div>
