--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -74,7 +74,20 @@
         font-size:18px;
       }
 
+      .button-grey
+      {
+        background-color: #dee0e2;;
+        padding: .526315em .789473em .263157em;
+        outline: 1px solid transparent;
+        cursor: pointer;
+        color: #000;
+        font-size:18px;
+      }
 
+      p
+      {
+        font-family: Arial,sans-serif;
+      }
 
 
     </style>
@@ -87,21 +100,24 @@
     {% if session.liveOrNot == "false" %}
       <div style="background-color: #FFFFFF; border-bottom: 5px solid #000000; height:130px; padding-top:10px; padding-bottom:10px; display: flex;" >
 
-        <div style="margin-right:0px; margin-left:10px; margin-top:0px; float: left; width:200px;">
-          <p style="font-size:18px;" align="left"><a style="color:#000000;" href="/account#draft-events">Account home</a></p>
-          
-          <p style="font-size:18px;" align="left">Draft URL<br>www.great.gov.uk/event/mh43dz</p>
+        <div style="margin-right:0px; margin-left:20px; margin-top:0px; float: left; width:200px;">
+          <p style="font-size:16px; margin-top:10px;" align="left"><a style="color:#000000; font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
+
+          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:50px;" align="left">
+            <span style="font-weight:700;">Share draft</span></span><br>www.great.gov.uk/event/mh43dz</p>
         </div>
 
         <div style="float:left; width:100%; margin-top:30px;">
-          <p style="margin:5px; margin-top:10px; font-size:36px; font-weight:700;">Draft event</p>
+          <p style="margin:5px; margin-top:10px;  margin-right:40px; font-size:36px; font-weight:700; font-family: Arial,sans-serif;">Draft event</p>
         </div>
 
 
         <form action="/make-draft-live" method="get" class="form">
 
-          <div style="margin-left:20px; margin-right:30px; margin-top:40px; float: right;">
-            <input type="submit" class="button" value="Make event live">
+          <div style="margin-left:20px; margin-right:30px; margin-top:10px; float: right;">
+            <input type="submit" class="button-grey" value="Make event live" style="margin-bottom:35px; width:170px;">
+
+            <input type="submit" class="button" value="Save draft" style=" width:170px;"  formaction="/account#draft-events">
           </div>
 
         </form>
