--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -13,12 +13,12 @@
           <details style="display:inline;">
             <summary><span class="summary">More options</span></summary>
             <div class="panel panel-border-narrow">
-              <p>
-                <a href="/summary-data/{{itemRow}}/false">Edit event</a> <br>
-                <a href="/clone-event/{{itemRow}}/false">Clone event</a> <br>
+              <ul>
+                <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/false">Edit event</a> </li>
+                <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/false">Clone event</a> </li>
                 <!-- <a href="#">Close registrations</a> <br> -->
-                <a href="#">Delete event</a>
-              </p>
+                <li style="margin-bottom:3px;"><a href="#">Delete event</a> </li>
+              </ul>
             </div>
           </details>
         </td>
