--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -1,47 +1,100 @@
 
 <!--  MACRO TO MAKE EACH LIVE LINE ITEM -->
 {% macro liveEvent(itemRow) %}
-<tr>
 
-  <th scope="row" style="padding-top:18px; padding-bottom: 11px;">{{ session.eventsLive[itemRow][0] }}<br>
-    <table style="margin-top: 0px;">
-      <thead>
-      <tr>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/monitor/live-present">Monitor event</a></td>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}/true">View event page</a></td>
-        <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
-          <details style="display:inline;">
-            <summary><span class="summary">More options</span></summary>
-            <div class="panel panel-border-narrow">
-              <p>
-                <a href="/summary-data/{{itemRow}}/true">Edit event</a> <br>
-                <a href="/clone-event/{{itemRow}}/true">Clone event</a> <br>
-                <a href="#">Close registrations</a> <br>
-                <a href="#">Unpublish event</a>
-                <a href="#">Delete event</a>
-              </p>
-            </div>
-          </details>
-        </td>
-      </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+<table style="width:100%;">
+  <thead>
+  <tr>
+    <th scope="col" style="width:65%; border-bottom: 0px; padding-top: 0px; padding-top:0px;"> </th>
+    <th class="col" style="width:20%; border-bottom: 0px; padding-top: 0px; padding-top:0px;" scope="col"></th>
+    <th class="col" style="width:16%; border-bottom: 0px; padding-top: 0px; padding-top:0px;" scope="col"></th>
+    <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
+  </tr>
+  </thead>
+
+  <tbody>
+<tr style="">
+
+  <th scope="row" style="padding-top:2px; padding-bottom: 3px; border-bottom:0px">{{ session.eventsLive[itemRow][0] }}<br>
+
   </th>
-  <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px;">{{ session.eventsLive[itemRow][3] }} {{ session.eventsLive[itemRow][5] }} {{ session.eventsLive[itemRow][6] }}</td>
+  <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; border-bottom:0px">{{ session.eventsLive[itemRow][3] }} {{ session.eventsLive[itemRow][5] }} {{ session.eventsLive[itemRow][6] }}</td>
 
   <!-- Number to match Filips scenarios  -->
   {% if session.eventsLiveBoolean[1] %}
     {% if itemRow == 0 %}
-      <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px; padding-right:0px; text-align:right;">18 / {{ session.eventsLive[itemRow][8] }} tickets</td>
+    <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; padding-right:0px; text-align:right; border-bottom:0px">18 / {{ session.eventsLive[itemRow][8] }} tickets</td>
     {% else %}
-    <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px; padding-right:0px; text-align:right;">5 / {{ session.eventsLive[itemRow][8] }} tickets</td>
+    <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; padding-right:0px; text-align:right; border-bottom:0px">5 / {{ session.eventsLive[itemRow][8] }} tickets</td>
     {% endif %}
   {% else %}
-    <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px; padding-right:0px; text-align:right;">5 / {{ session.eventsLive[itemRow][8] }} tickets</td>
+    <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; padding-right:0px; text-align:right; border-bottom:0px">5 / {{ session.eventsLive[itemRow][8] }} tickets</td>
   {% endif %}
 </tr>
+
+
+  </tbody>
+</table>
+
+<!--  the bottom roww of data  -->
+<table style="width:100%; margin-top:0px; padding-bottom:10px; border-bottom:1px solid #bfc1c3;">
+  <thead>
+    <tr>
+      <th scope="col" style="width:32%; border-bottom: 0px; padding-top: 0px; padding-bottom: 0px;"> </th>
+      <th class="col" style="width:25%; border-bottom: 0px; padding-top: 0px;; padding-bottom: 0px;" scope="col"></th>
+      <th class="col" style="width:43%; border-bottom: 0px; padding-top: 0px;; padding-bottom: 0px;"></th>
+      <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
+    </tr>
+  </thead>
+
+  <tbody>
+
+
+    <tr>
+
+      <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 12px; ">
+        <a href="/monitor/live-present">Monitor event</a>  &nbsp; &nbsp; &nbsp;
+        <a href="/preview-data/{{itemRow}}/true">View event page</a></td>
+
+      <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
+        <details style="display:inline;">
+          <summary><span class="summary">More options</span></summary>
+          <div class="panel panel-border-narrow">
+            <ul>
+              <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/true">Edit event</a></li>
+              <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/true">Clone event</a></li>
+
+              {% if session.eventsLive[itemRow][19] == false %}
+                 <li style="margin-bottom:3px;"><a href="/toggle-closed-reg/{{itemRow}}">Close registrations</a></li>
+              {% else %}
+                 <li style="margin-bottom:3px;"><a href="/toggle-closed-reg/{{itemRow}}">Open registrations</a></li>
+              {% endif %}
+
+              <li style="margin-bottom:3px;"><a href="#">Unpublish event</a></li>
+              <li style="margin-bottom:3px;"><a href="#">Delete event</a></li>
+            </ul>
+          </div>
+        </details>
+      </td>
+
+      <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 12px; padding-right:0px; text-align:right;">
+        {% if session.eventsLive[itemRow][19] %}
+          <span style="font-weight:700">Registrations are closed</span>
+        {% else %}
+          <div style="background-color: #FFFFFF; margin-left:290px; border:1px solid #000000; height:5px; border-left:90px solid #000000;;">
+
+          </div>
+        {% endif %}
+      </td>
+
+    </tr>
+
+  </tbody>
+</table>
+
+
+
+
 {% endmacro %}
 
 
@@ -70,17 +123,7 @@
     <br>
     <br>
   {% else %}
-    <table style="width:100%;">
-      <thead>
-      <tr>
-        <th scope="col" style="width:65%; border-bottom: 0px; padding-top: 0px;"> </th>
-        <th class="col" style="width:20%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>
-        <th class="col" style="width:16%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>
-        <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
-      </tr>
-      </thead>
 
-      <tbody>
 
       <!-- EVENT ONE  -->
       {% if session.eventsLiveBoolean[0] %}
@@ -108,8 +151,6 @@
       {% endif %}
 
 
-      </tbody>
-    </table>
   {% endif %}
 
 
