--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -103,8 +103,9 @@
         <div style="margin-right:0px; margin-left:20px; margin-top:0px; float: left; width:200px;">
           <p style="font-size:16px; margin-top:10px;" align="left"><a style="color:#000000; font-family: Arial,sans-serif;" href="/account#draft-events">Account home</a></p>
 
-          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:50px;" align="left">
-            <span style="font-weight:700;">Share draft</span></span><br>www.great.gov.uk/event/mh43dz</p>
+          <p class="form-label-bold" style="font-size:18px; font-family: Arial,sans-serif; margin-top:76px;" align="left">
+            <a href="/monitor/live-present#track-links">Share draft</a>
+          </p>
         </div>
 
         <div style="float:left; width:100%; margin-top:30px;">
