--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -1,37 +1,89 @@
 
 <!--  MACRO TO MAKE EACH DRAFT LINE ITEM -->
 {% macro draftEvent(itemRow) %}
-<tr>
+<table style="width:100%;">
+  <thead>
+    <tr>
+      <th scope="col" style="width:65%; border-bottom: 0px; padding-top: 0px; padding-top:0px;"> </th>
+      <th class="col" style="width:20%; border-bottom: 0px; padding-top: 0px; padding-top:0px;" scope="col"></th>
+      <th class="col" style="width:16%; border-bottom: 0px; padding-top: 0px; padding-top:0px;" scope="col"></th>
+      <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
+    </tr>
+  </thead>
 
-  <th scope="row" style="padding-top:18px; padding-bottom: 11px;">{{ session.eventsDraft[itemRow][0] }}<br>
-    <table style="margin-top: 0px;">
-      <thead>
-      <tr>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/summary-data/{{itemRow}}/false">View summary</a></td>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}/false">View event page</a></td>
-        <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
-          <details style="display:inline;">
-            <summary><span class="summary">More options</span></summary>
-            <div class="panel panel-border-narrow">
-              <ul>
-                <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/false">Edit event</a> </li>
-                <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/false">Clone event</a> </li>
-                <!-- <a href="#">Close registrations</a> <br> -->
-                <li style="margin-bottom:3px;"><a href="#">Delete event</a> </li>
-              </ul>
-            </div>
-          </details>
-        </td>
-      </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-  </th>
-  <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px;">{{ session.eventsDraft[itemRow][3] }} {{ session.eventsDraft[itemRow][5] }} {{ session.eventsDraft[itemRow][6] }}</td>
-  <td class="row" valign="top" style="padding-top:18px; padding-bottom: 11px; padding-right:0px; text-align:right;">{{ session.eventsDraft[itemRow][8] }} tickets</td>
-  <!--<td class="row" valign="top" style="padding-right:0px; font-weight:700; color:#B10E1E;">Private draft</td>-->
-</tr>
+  <tbody>
+    <tr style="">
+
+      <th scope="row" style="padding-top:2px; padding-bottom: 3px; border-bottom:0px">
+        {{ session.eventsDraft[itemRow][0] }}<br>
+      </th>
+
+      <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; border-bottom:0px">
+        {{ session.eventsDraft[itemRow][3] }} {{ session.eventsDraft[itemRow][5] }} {{ session.eventsDraft[itemRow][6] }}
+      </td>
+
+      <td class="row" valign="top" style="padding-top:2px; padding-bottom: 3px; padding-right:0px; text-align:right; border-bottom:0px">
+        {{ session.eventsDraft[itemRow][8] }} tickets
+      </td>
+
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+<!--  The bottom row -->
+<table style="width:100%; margin-top:0px; padding-bottom:10px; border-bottom:1px solid #bfc1c3;">
+  <thead>
+  <tr>
+    <th scope="col" style="width:32%; border-bottom: 0px; padding-top: 0px; padding-bottom: 0px;"> </th>
+    <th class="col" style="width:25%; border-bottom: 0px; padding-top: 0px;; padding-bottom: 0px;" scope="col"></th>
+    <th class="col" style="width:43%; border-bottom: 0px; padding-top: 0px;; padding-bottom: 0px;"></th>
+    <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
+  </tr>
+  </thead>
+
+  <tbody>
+
+
+  <tr>
+
+    <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 12px; ">
+      <a href="/summary-data/{{itemRow}}/true">View summary</a>  &nbsp; &nbsp; &nbsp;
+      <a href="/preview-data/{{itemRow}}/false">View event page</a>
+    </td>
+
+
+    <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
+      <details style="display:inline;">
+        <summary><span class="summary">More options</span></summary>
+        <div class="panel panel-border-narrow">
+          <ul>
+            <li style="margin-bottom:3px;"><a href="/monitor/live-present#track-links">Share draft</a></li>
+            <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/true">Edit event</a></li>
+            <li style="margin-bottom:3px;"><a href="/clone-event/{{itemRow}}/true">Clone event</a></li>
+            <li style="margin-bottom:3px;"><a href="#">Delete event</a></li>
+            <li style="margin-bottom:3px;">
+              <div style="margin-left:0px; margin-top:20px;">
+                <input type="submit" class="button-secondary" value="Make event live" formaction="/account#draft-events">
+              </div>
+            </li>
+          </ul>
+        </div>
+      </details>
+    </td>
+
+    <td>
+    </td>
+
+
+  </tr>
+
+  </tbody>
+</table>
+
+
 {% endmacro %}
 
 
@@ -50,7 +102,7 @@
     <form action="/create-event/new" method="get" class="form">
 
       <div class="form-group">
-        <input type="submit" class="button" value="Create new event">
+        <input type="submit" class="button" value="Create new event" >
       </div>
 
     </form>
@@ -60,17 +112,7 @@
     <br>
     <br>
   {% else %}
-    <table style="width:100%;">
-      <thead>
-      <tr>
-        <th scope="col" style="width:65%; border-bottom: 0px; padding-top: 0px;"> </th>
-        <th class="col" style="width:20%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>
-        <th class="col" style="width:16%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>
-        <!-- <th class="col" style="width:13%; border-bottom: 0px; padding-top: 0px;" scope="col"></th>  -->
-      </tr>
-      </thead>
 
-      <tbody>
 
       <!-- EVENT ONE  -->
       {% if session.eventsDraftBoolean[0] %}
@@ -98,8 +140,6 @@
       {% endif %}
 
 
-      </tbody>
-    </table>
   {% endif %}
 
 
