testing some what done

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -49,13 +49,13 @@
 		  <p>In order to register for any event, prospective attendees will always need to provide their:</p>
 		  <ul class="list list-bullet">
 			  <li>full name</li>
+			  <li>business  name</li>
 			  <li>full business address</li>
 			  <li>phone number</li>
 			  <li>email address</li>
-			  <li>company name</li>
 			  <li>primary sector of company</li>
 			  <li>job title</li>
-			  <li>company website</li>
+			  <li>company website (optional)</li>
 		  </ul>
 
 		  <br>
@@ -78,7 +78,6 @@
 							  <input id="radio-inline-1" type="radio" name="radio-additional-questions-boolean" value="yes">
 							  <label for="radio-inline-1">Yes, I need to add further registration questions</label>
 						  </div>
-
 					  </div>
 				  </div>
 		  </fieldset>
