--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -11,7 +11,7 @@
     <div class="column-full">
 
       <h1 class="heading-large">
-		  DIT East of England events
+		  DIT North East events
       </h1>
 
 
@@ -28,7 +28,7 @@
 					<li><a class="template-events" href="#template-events" style="text-decoration: none;">Templates</a></li>
 					<li><a class="past-events" href="#past-events" style="text-decoration: none;">Past</a></li>
 					<li>
-						<div style="margin-left:120px; margin-top:9px;">
+						<div style="margin-left:180px; margin-top:9px;">
 							<input type="submit" class="button-secondary" value="Create new event">
 						</div>
 					</li>
